--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "autoprefixer": "10.4.19",
+    "babel": "^6.23.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
